--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-session-sequelize": "^5.2.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
